--- a/index.css
+++ b/index.css
@@ -44,9 +44,15 @@ header .container {
 }
 
 .icon {
+    transition: .1s ease;
     width: 20px;
     height: 20px;
     margin: 0 20px 10px 0;
+}
+
+.icon:hover {
+    width: 25px;
+    height: 25px;
 }
 
 header .avatar,
